--- a/_toc.yml
+++ b/_toc.yml
@@ -4,8 +4,20 @@ parts:
 - caption: Basics of Python
   numbered: true
   chapters:
-  - file: content/python_basics/python_chheader
+  - file: content/python_basics/chheader
     sections:
     - file: content/python_basics/python_basics
     - file: content/python_basics/python_numpy
     - file: content/python_basics/python_plotting
+- caption: Basics of Linear Regression
+  numbered: true
+  chapters:
+  - file: content/basic_linear_regression/chheader
+- caption: Generalizing linear regression
+  numbered: true
+  chapters:
+  - file: content/generalizing_linear_regression/chheader
+- caption: Extensions and applications
+  numbered: true
+  chapters:
+  - file: content/extensions_applications/chheader
