--- a/_toc.yml
+++ b/_toc.yml
@@ -13,5 +13,6 @@ parts:
     sections:
     - file: content/basic_linear_regression/visualizing_data
     - file: content/basic_linear_regression/simple_linear_regression
+    - file: content/basic_linear_regression/simple_linear_regression_cont
   - file: content/generalizing_linear_regression/chheader
   - file: content/extensions_applications/chheader
