--- a/_toc.yml
+++ b/_toc.yml
@@ -14,5 +14,6 @@ parts:
     - file: content/basic_linear_regression/visualizing_data
     - file: content/basic_linear_regression/simple_linear_regression
     - file: content/basic_linear_regression/simple_linear_regression_cont
+    - file: content/basic_linear_regression/vectors_and_matrices
   - file: content/generalizing_linear_regression/chheader
   - file: content/extensions_applications/chheader
