add multiple predictors section

--- a/_toc.yml
+++ b/_toc.yml
@@ -15,5 +15,7 @@ parts:
     - file: content/basic_linear_regression/simple_linear_regression
     - file: content/basic_linear_regression/simple_linear_regression_cont
     - file: content/basic_linear_regression/vectors_and_matrices
+    - file: content/basic_linear_regression/multiple_predictors
+    - file: content/basic_linear_regression/more_least_squares
   - file: content/generalizing_linear_regression/chheader
   - file: content/extensions_applications/chheader
