--- a/_toc.yml
+++ b/_toc.yml
@@ -21,4 +21,6 @@ parts:
     - file: content/basic_linear_regression/hypothesis_testing
     - file: content/basic_linear_regression/diagnostics
   - file: content/generalizing_linear_regression/chheader
+    sections:
+    - file: content/generalizing_linear_regression/ridge_and_lasso
   - file: content/extensions_applications/chheader
