--- a/_toc.yml
+++ b/_toc.yml
@@ -24,4 +24,5 @@ parts:
     sections:
     - file: content/generalizing_linear_regression/ridge_and_lasso
     - file: content/generalizing_linear_regression/nonlinear_regression
+    - file: content/generalizing_linear_regression/logistic_regression
   - file: content/extensions_applications/chheader
